--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "nanoid": "^5.1.5",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "recharts": "^3.1.2"
   }
 }
