--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jobify",
   "version": "1.0.0",
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "setup-project": "npm i && cd client && npm i",
